--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "@babel/core": "^7.20.5",
     "@babel/node": "^7.20.5",
     "@babel/preset-env": "^7.20.2",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "prettier": "2.8.0"
   },
   "dependencies": {
     "express": "^4.18.2",
